# ekad

./: .gitignore  .pre-commit-config.yaml  .prettierrc  Cargo.toml  LICENSE  README.md  biome.json  bun.lockb  go.mod  go.sum  justfile  notes.txt  package.json  tailwind.config.js  tsconfig.json
cmd/ek/: main.go
frontend/: App.tsx  OldApp.tsx  cookies.ts  index.html  index.tsx  theme.ts  theme.tsx  types.ts  utils.ts  vite.config.js
frontend/components/: ArchiveGraphView.tsx  Button.tsx  DocProvider.tsx  Fold.tsx  GraphView.tsx  HotkeyProvider.tsx  ListView.tsx  Modal.tsx  SelectedTaskPane.tsx  TaskCard.tsx  TaskChip.tsx  TaskGraphView.tsx  TaskSearcher.tsx  TextInput.tsx
frontend/repo/: documentSelection.tsx
pkg/database/: database.go  database_test.go  migrations.go  migrations_test.go  sqlite_database.go
pkg/database/migrations/: 01_initial-migration.sql  02_tasks-deleted-at.sql  03_tasks-completed-at.sql  04_tasks-body.sql
pkg/linereader/: cursor_pos.go  cursor_pos_test.go  line_reader.go  read_line.go
pkg/models/: task.go
pkg/searcher/: searcher.go
pkg/terminal/: cursor_pos.go  cursor_pos_test.go
scripts/: build.ts  dev.sh  dev.ts
src/: graph.rs  graph_viewer.rs  main.rs  shapes.rs  text.rs
src-tauri/: Cargo.toml  tauri.conf.json
