[package]
name = "ekad"
version = "0.0.0"
edition = "2021"

[dependencies]
accesskit = "0.16.0"
anyhow = "1.0.86"
lazy_static = "1.5.0"
log = "0.4.22"
masonry = { path = "../xilem/masonry" }
petgraph = "0.6.5"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
smallvec = "1.13.2"
vello = "0.1.0"
winit = "0.30.4"
