[package]
name = "ekad"
version = "0.0.0"
edition = "2021"

[dependencies]
accesskit = "0.16.0"
anyhow = "1.0.86"
automerge = "0.5.11"
enum-map = "2.7.3"
lazy_static = "1.5.0"
log = "0.4.22"
masonry = { git = "https://github.com/linebender/xilem", rev = "522d42cf0ce4fc877651b31cb5cb75843b19a75e" }
petgraph = "0.6.5"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
rusqlite = "0.32.1"
smallvec = "1.13.2"
uuid = { version = "1.10.0", features = ["v7"] }
vello = "0.1.0"
winit = "0.30.4"
